--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -479,29 +479,24 @@ jobs:
           if [ -f last_sha.txt ]; then
             LAST_SHA=$(cat last_sha.txt)
           else
-            # Fallback to first commit if no previous SHA available
             LAST_SHA=$(git rev-list --max-parents=0 HEAD)
           fi
           echo "Commits since $LAST_SHA:"
-          # Accumulate commit logs in a shell variable
-          COMMIT_LOGS=$(git log $LAST_SHA..HEAD --pretty=format:"* [%H](https://github.com/$GITHUB_REPOSITORY/commit/%H) : %s")
-          # URL-encode the newline characters for GitHub Actions
-          COMMIT_LOGS="${COMMIT_LOGS//'%'/'%25'}"
-          COMMIT_LOGS="${COMMIT_LOGS//$'\n'/'%0A'}"
-          COMMIT_LOGS="${COMMIT_LOGS//$'\r'/'%0D'}"
           
-          # Append the encoded commit logs to the COMMIT_LOG environment variable
-          echo "COMMIT_LOG=${COMMIT_LOGS}" >> $GITHUB_ENV
-          
-          # Debugging: Print the variable to check its content
-          echo "$COMMIT_LOGS"
-          echo "$COMMIT_LOGS" > commit_log.txt
-          
+          # Store commit logs in a file directly
+          git log $LAST_SHA..HEAD --pretty=format:"* [%H](https://github.com/$GITHUB_REPOSITORY/commit/%H) : %s" > commit_log.txt
+      
+          # Encode and save the file content to GITHUB_ENV
+          echo "COMMIT_LOG<<EOF" >> $GITHUB_ENV
+          cat commit_log.txt >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
+      
           # Extract branch name from github.ref
           BRANCH=${{ github.ref }}
           BRANCH=${BRANCH#refs/heads/}
           echo "BRANCH=${BRANCH}" >> $GITHUB_ENV
-        shell: /usr/bin/bash -e {0}
+        shell: bash
+
         env:
           CI: true
         continue-on-error: true
