--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -25,33 +25,27 @@ jobs:
 
       - name: Get Commits Since Last Run
         run: |
-          if [ -f last_shaa.txt ]; then
-            LAST_SHA=$(cat last_shaa.txt)
-          else
-            LAST_SHA=$(git rev-list --max-parents=0 HEAD)
-          fi
-          echo "Commits since $LAST_SHA:"
-          
-          # Store commit logs in a file
-          git log $LAST_SHA..HEAD --pretty=format:"* [%H](https://github.com/$GITHUB_REPOSITORY/commit/%H) : %s" > commit_log.txt
-      
-          # Correctly append commit logs to the GITHUB_ENV file
-          {
-            echo "COMMIT_LOG<<EOF"
-            cat commit_log.txt
-            echo "EOF"
-          } >> $GITHUB_ENV
-      
-          # Extract branch name from github.ref
-          BRANCH="refs/heads/beta"
-          BRANCH=${BRANCH#refs/heads/}
-          echo "BRANCH=$BRANCH" >> $GITHUB_ENV
-        shell: bash
-
-
-        env:
-          CI: true
-        continue-on-error: true
+             # Fix the filename typo
+             if [ -f last_sha.txt ]; then
+              LAST_SHA=$(cat last_sha.txt)
+              else
+              LAST_SHA=$(git rev-list --max-parents=0 HEAD)
+              fi
+              echo "Commits since $LAST_SHA:"
+            
+              # Store commit logs in a file
+              git log $LAST_SHA..HEAD --pretty=format:"* [%H](https://github.com/${{ github.repository }}/commit/%H) : %s" > commit_log.txt
+            
+              # Use a different approach to set the environment variable
+              echo "COMMIT_LOG=$(cat commit_log.txt | base64 -w0)" >> $GITHUB_ENV
+            
+              # Extract branch name from github.ref
+              BRANCH="refs/heads/beta"
+              BRANCH=${BRANCH#refs/heads/}
+              echo "BRANCH=$BRANCH" >> $GITHUB_ENV
+              env:
+              CI: true
+              continue-on-error: true
 
       - name: Save Current SHA for Next Run
         run: echo ${{ github.sha }} > last_shaa.txt
@@ -60,6 +54,7 @@ jobs:
         env:
           DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_ALPHA }}
         run: |
+          COMMIT_LOGS=$(echo $COMMIT_LOG | base64 -d)
           # Start with release header
           echo "**🚀 New Release: Beta**" > header.txt
           
@@ -127,7 +122,7 @@ jobs:
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
           TELEGRAM_TOPIC: ${{ secrets.TELEGRAM_THREAD_ID }}
         run: |
-
+          COMMIT_LOGS=$(echo $COMMIT_LOG | base64 -d)
           # Start with release header
           echo "<b>🚀 New Release: Beta</b>" > header.txt
           
