--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,4 +1,4 @@
-name: Build (Beta)  testing
+name: Build (Beta) testing
 
 on:
   push:
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     #needs: [build-android, build-ios, build-linux, build-windows, build-macos]
     steps:
-      - name: Cloing repository
+      - name: Cloning repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
@@ -25,21 +25,20 @@ jobs:
 
       - name: Get Commits Since Last Run
         run: |
-          # Fix the filename typo
           if [ -f last_sha.txt ]; then
             LAST_SHA=$(cat last_sha.txt)
           else
             LAST_SHA=$(git rev-list --max-parents=0 HEAD)
           fi
-          echo "Commits since $LAST_SHA:"
           
-          # Store commit logs in a file
+          echo "Commits since $LAST_SHA:"
           git log $LAST_SHA..HEAD --pretty=format:"* [%H](https://github.com/Shebyyy/AnymeX/commit/%H) : %s" > commit_log.txt
           
-          # Use a different approach to set the environment variable
-          echo "COMMIT_LOG=$(cat commit_log.txt | base64 -w0)" >> $GITHUB_ENV
+          COMMIT_LOGS=$(cat commit_log.txt)
+          echo "COMMIT_LOGS<<EOF" >> $GITHUB_ENV
+          echo "$COMMIT_LOGS" >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
           
-          # Extract branch name from github.ref
           BRANCH="refs/heads/beta"
           BRANCH=${BRANCH#refs/heads/}
           echo "BRANCH=$BRANCH" >> $GITHUB_ENV
@@ -52,34 +51,19 @@ jobs:
         env:
           DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_ALPHA }}
         run: |
-          COMMIT_LOGS=$(echo $COMMIT_LOG | base64 -d)
-          # Start with release header
+          COMMIT_LOGS=$(cat commit_log.txt)
           echo "**🚀 New Release: Beta**" > header.txt
           
-          # Extract all categories into separate files
           echo "**🚀 Features**" > TFeatures.txt
           echo "$(echo "$COMMIT_LOGS" | grep -iE '^\*\s\[[a-f0-9]+\]\(.*\):\sfeat' | sed -E 's/\): [^:]+:/) :/g' | head -n 5)" > feat.txt
 
           echo "**🐛 Fixes**" > TFixes.txt
           echo "$(echo "$COMMIT_LOGS" | grep -iE '^\*\s\[[a-f0-9]+\]\(.*\):\s(fix|bug|improvement|patch)' | sed -E 's/\): [^:]+:/) :/g' | head -n 5)" > fixes.txt
 
-          echo "**🔧 Refactors**" > TRefactors.txt
-          echo "$(echo "$COMMIT_LOGS" | grep -iE '^\*\s\[[a-f0-9]+\]\(.*\):\srefactor' | sed -E 's/\): [^:]+:/) :/g' | head -n 5)" > refactors.txt
-
-          echo "**💅 Style**" > TStyle.txt
-          echo "$(echo "$COMMIT_LOGS" | grep -iE '^\*\s\[[a-f0-9]+\]\(.*\):\sstyle' | sed -E 's/\): [^:]+:/) :/g' | head -n 5)" > style.txt
-
-          echo "**⚡ Performance**" > TPerformance.txt
-          echo "$(echo "$COMMIT_LOGS" | grep -iE '^\*\s\[[a-f0-9]+\]\(.*\):\sperf' | sed -E 's/\): [^:]+:/) :/g' | head -n 5)" > perf.txt
-
-          echo "**🛠 Chores**" > TChores.txt
-          echo "$(echo "$COMMIT_LOGS" | grep -iE '^\*\s\[[a-f0-9]+\]\(.*\):\s(chore|docs|build|ci)' | sed -E 's/\): [^:]+:/) :/g' | head -n 5)" > chores.txt
-        
           default_color="#1ac4c5"
           hex_to_decimal() { printf '%d' "0x${1#"#"}"; }
           embed_color=$(hex_to_decimal "$default_color")
 
-          # Ensure VERSION is not empty
           VERSION=${VERSION:-"Beta"}
       
           discord_data=$(jq -nc \
@@ -87,7 +71,6 @@ jobs:
                         --arg field_value "$COMMIT_LOGS
 
             [❓Don't know which version to download? Click here!](https://github.com/${{ github.repository }}/blob/main/INSTALLATION.md)" \
-            
                         --arg footer_text "Version $VERSION" \
                         --arg timestamp "$(date -u +%Y-%m-%dT%H:%M:%S.000Z)" \
                         --argjson embed_color "$embed_color" \
@@ -108,7 +91,6 @@ jobs:
 
           echo "Debug: Final Discord payload is: $discord_data"
 
-          # Send the message to Discord using the webhook
           curl -H "Content-Type: application/json" \
               -X POST \
               -d "$discord_data" \
@@ -120,76 +102,21 @@ jobs:
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
           TELEGRAM_TOPIC: ${{ secrets.TELEGRAM_THREAD_ID }}
         run: |
-          COMMIT_LOGS=$(echo $COMMIT_LOG | base64 -d)
-          # Start with release header
+          COMMIT_LOGS=$(cat commit_log.txt)
           echo "<b>🚀 New Release: Beta</b>" > header.txt
           
-          # Extract all categories into separate files
           echo "**🚀 Features**" > TFeatures.txt
           echo "$(echo "$COMMIT_LOGS" | grep -iE '^\*\s\[[a-f0-9]+\]\(.*\):\sfeat' | sed -E 's/\): [^:]+:/) :/g' | head -n 5)" > feat.txt
 
           echo "**🐛 Fixes**" > TFixes.txt
           echo "$(echo "$COMMIT_LOGS" | grep -iE '^\*\s\[[a-f0-9]+\]\(.*\):\s(fix|bug|improvement|patch)' | sed -E 's/\): [^:]+:/) :/g' | head -n 5)" > fixes.txt
 
-          echo "**🔧 Refactors**" > TRefactors.txt
-          echo "$(echo "$COMMIT_LOGS" | grep -iE '^\*\s\[[a-f0-9]+\]\(.*\):\srefactor' | sed -E 's/\): [^:]+:/) :/g' | head -n 5)" > refactors.txt
-
-          echo "**💅 Style**" > TStyle.txt
-          echo "$(echo "$COMMIT_LOGS" | grep -iE '^\*\s\[[a-f0-9]+\]\(.*\):\sstyle' | sed -E 's/\): [^:]+:/) :/g' | head -n 5)" > style.txt
-
-          echo "**⚡ Performance**" > TPerformance.txt
-          echo "$(echo "$COMMIT_LOGS" | grep -iE '^\*\s\[[a-f0-9]+\]\(.*\):\sperf' | sed -E 's/\): [^:]+:/) :/g' | head -n 5)" > perf.txt
-
-          echo "**🛠 Chores**" > TChores.txt
-          echo "$(echo "$COMMIT_LOGS" | grep -iE '^\*\s\[[a-f0-9]+\]\(.*\):\s(chore|docs|build|ci)' | sed -E 's/\): [^:]+:/) :/g' | head -n 5)" > chores.txt
-
-          # Process each file through the parser
-          chmod +x scripts/tel_commit_parser.sed
-          
-          ./scripts/tel_commit_parser.sed feat.txt > feat_clean.txt
-          ./scripts/tel_commit_parser.sed fixes.txt > fixes_clean.txt
-          ./scripts/tel_commit_parser.sed refactors.txt > refactors_clean.txt
-          ./scripts/tel_commit_parser.sed style.txt > style_clean.txt
-          ./scripts/tel_commit_parser.sed perf.txt > perf_clean.txt
-          ./scripts/tel_commit_parser.sed chores.txt > chores_clean.txt
-          
-          ./scripts/tel_commit_parser.sed TFeatures.txt > TFeaturesT.txt
-          ./scripts/tel_commit_parser.sed TFixes.txt > TFixesT.txt
-          ./scripts/tel_commit_parser.sed TRefactors.txt > TRefactorsT.txt
-          ./scripts/tel_commit_parser.sed TStyle.txt > TStyleT.txt
-          ./scripts/tel_commit_parser.sed TPerformance.txt > TPerformanceT.txt
-          ./scripts/tel_commit_parser.sed TChores.txt > TChoresT.txt
-
-          # Check and remove empty categories
-          if [ ! -s feat_clean.txt ] || [ "$(tr -d '[:space:]' < feat_clean.txt)" = "" ]; then
-              rm -f feat_clean.txt TFeaturesT.txt
-          fi
-          if [ ! -s fixes_clean.txt ] || [ "$(tr -d '[:space:]' < fixes_clean.txt)" = "" ]; then
-              rm -f fixes_clean.txt TFixesT.txt
-          fi
-          if [ ! -s refactors_clean.txt ] || [ "$(tr -d '[:space:]' < refactors_clean.txt)" = "" ]; then
-              rm -f refactors_clean.txt TRefactorsT.txt
-          fi
-          if [ ! -s style_clean.txt ] || [ "$(tr -d '[:space:]' < style_clean.txt)" = "" ]; then
-              rm -f style_clean.txt TStyleT.txt
-          fi
-          if [ ! -s perf_clean.txt ] || [ "$(tr -d '[:space:]' < perf_clean.txt)" = "" ]; then
-              rm -f perf_clean.txt TPerformanceT.txt
-          fi
-          if [ ! -s chores_clean.txt ] || [ "$(tr -d '[:space:]' < chores_clean.txt)" = "" ]; then
-              rm -f chores_clean.txt TChoresT.txt
-          fi
-
           # Combine categories into final output
           {
               cat header.txt
               echo ""
-              [ -f TFeaturesT.txt ] && [ -f feat_clean.txt ] && echo -n "$(cat TFeaturesT.txt) <blockquote>$(cat feat_clean.txt)</blockquote> "
-              [ -f TFixesT.txt ] && [ -f fixes_clean.txt ] && echo -n "$(cat TFixesT.txt) <blockquote>$(cat fixes_clean.txt)</blockquote> "
-              [ -f TRefactorsT.txt ] && [ -f refactors_clean.txt ] && echo -n "$(cat TRefactorsT.txt) <blockquote>$(cat refactors_clean.txt)</blockquote> "
-              [ -f TStyleT.txt ] && [ -f style_clean.txt ] && echo -n "$(cat TStyleT.txt) <blockquote>$(cat style_clean.txt)</blockquote> "
-              [ -f TPerformanceT.txt ] && [ -f perf_clean.txt ] && echo -n "$(cat TPerformanceT.txt) <blockquote>$(cat perf_clean.txt)</blockquote> "
-              [ -f TChoresT.txt ] && [ -f chores_clean.txt ] && echo -n "$(cat TChoresT.txt) <blockquote>$(cat chores_clean.txt)</blockquote> "
+              [ -f TFeatures.txt ] && [ -f feat.txt ] && echo -n "$(cat TFeatures.txt) <blockquote>$(cat feat.txt)</blockquote> "
+              [ -f TFixes.txt ] && [ -f fixes.txt ] && echo -n "$(cat TFixes.txt) <blockquote>$(cat fixes.txt)</blockquote> "
               echo ""
               echo "❓<a href='https://github.com/${{ github.repository }}/blob/main/INSTALLATION.md'>Don't know which version to download? Click here!</a>"
               } > output.txt
@@ -206,15 +133,9 @@ jobs:
               -d "text=$markdown_info_tel" \
               -d "parse_mode=HTML" \
               -d "disable_web_page_preview=true"
-              
-          Commits:
-          ${telegram_commit_messages}
-          Version: $VERSION" \
-              -d "parse_mode=HTML" \
-              -d "disable_web_page_preview=true")
-    
+
       - name: Upload Current SHA as Artifact
         uses: actions/upload-artifact@v4
         with:
           name: last-shaa
-          path: last_shaa.txt
+          path: last_sha.txt
