--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -66,6 +66,9 @@ jobs:
           echo "**🛠 Chores**" > commit_logs.txt
           echo "$(echo "$COMMIT_LOG" | grep -iE '^\*\s\[[a-f0-9]+\]\(.*\):\s(chore|docs|build|ci)' | head -n 5)" > commit_logs.txt
           
+          # Assign the contents of commit_logs.txt to COMMIT_LOGS
+          COMMIT_LOGS=$(cat commit_logs.txt)
+          
           # Encode and save the file content to GITHUB_ENV
           {
             echo "COMMIT_LOGS<<EOF"
